packages/dbml-core/src/parse/deprecated/schemarbParser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

var _ = require("lodash"), pluralize = require("pluralize");

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { schema: peg$parseschema },
      peg$startRuleFunction  = peg$parseschema,

      peg$c0 = function() {
        return implicityRef(data)
      },
      peg$c1 = function(tableData) {
        const { table, refs } = tableData;
        pushTable(table);
        pushRefs(refs)
      },
      peg$c2 = function(r) {
          pushRef(r);
        },
      peg$c3 = ",",
      peg$c4 = peg$literalExpectation(",", false),
      peg$c5 = function(tableName, expression, props) {
          const checkName = props.find(p => p.name)?.name;
          addCheckConstraintToTable(tableName, expression, checkName);
        },
      peg$c6 = function(fromTable, toTable, props) {
          const foreign = refactorForeign(createForeign(fromTable, toTable, props));
          return foreign;
        },
      peg$c7 = ":",
      peg$c8 = peg$literalExpectation(":", false),
      peg$c9 = function(columnName) { return ({ columnName }) },
      peg$c10 = function(primaryKey) { return ({ primaryKey }) },
      peg$c11 = function(r, value) {
        switch (r.toLowerCase()) {
          case 'on_delete':
            return {
              onDelete: value.split('_').join(' ')
            }
          case 'on_update':
            return {
              onUpdate: value.split('_').join(' ')
            }
        }
       },
      peg$c12 = function(name, body) {
          const table = ({
            name,
            fields: addPrimaryKey(body.fields),
            // index: _.union(...body.index)
          })
          if (body.checks && body.checks.length > 0) {
            table.checks = body.checks;
          }
          return {
            table,
            refs: createRefFromTableWithReference(table, body.references)
          };
        },
      peg$c13 = function(fields) {
          return ({
            fields: fields.filter(field => field.isField).map(field => field.field),
            index: fields.filter(field => field.isIndex).map(field => field.index),
            references: fields.filter(field => field.isReferences).map(field => field.reference),
            checks: fields.filter(field => field.isCheck).map(field => field.check),
          });
        },
      peg$c14 = function(field) { return field },
      peg$c15 = function(reference) { return ({ reference, isReferences: true })},
      peg$c16 = function(check) { return ({ check, isCheck: true })},
      peg$c17 = function(field) { return ({ field, isField: true }) },
      peg$c18 = function(reference) {
          return reference;
        },
      peg$c19 = function(expression, props) {
          const check = { expression };
          for (let i = 0; i < props.length; i++) {
            if (props[i].name) {
              check.name = props[i].name;
            }
          }
          return check;
        },
      peg$c20 = function(type, name) {
          return ({
            name: name,
            type: {type_name: type},
          })
        },
      peg$c21 = function(reference) { return reference },
      peg$c22 = "name",
      peg$c23 = peg$literalExpectation("name", true),
      peg$c24 = function(constraintName) { return ({ name: constraintName }) },
      peg$c25 = "on_delete",
      peg$c26 = peg$literalExpectation("on_delete", true),
      peg$c27 = "on_update",
      peg$c28 = peg$literalExpectation("on_update", true),
      peg$c29 = peg$otherExpectation("add index"),
      peg$c30 = "add_index",
      peg$c31 = peg$literalExpectation("add_index", false),
      peg$c32 = peg$otherExpectation("schema define"),
      peg$c33 = "ActiveRecord::Schema.define",
      peg$c34 = peg$literalExpectation("ActiveRecord::Schema.define", false),
      peg$c35 = peg$otherExpectation("create table"),
      peg$c36 = "create_table",
      peg$c37 = peg$literalExpectation("create_table", true),
      peg$c38 = peg$otherExpectation("do |t|"),
      peg$c39 = peg$otherExpectation("index"),
      peg$c40 = ".index",
      peg$c41 = peg$literalExpectation(".index", false),
      peg$c42 = peg$otherExpectation("references"),
      peg$c43 = ".references",
      peg$c44 = peg$literalExpectation(".references", false),
      peg$c45 = peg$otherExpectation("check constraint"),
      peg$c46 = ".check_constraint",
      peg$c47 = peg$literalExpectation(".check_constraint", false),
      peg$c48 = peg$otherExpectation("add check constraint"),
      peg$c49 = "add_check_constraint",
      peg$c50 = peg$literalExpectation("add_check_constraint", true),
      peg$c51 = peg$otherExpectation("add foreign key"),
      peg$c52 = "add_foreign_key",
      peg$c53 = peg$literalExpectation("add_foreign_key", true),
      peg$c54 = peg$otherExpectation("column"),
      peg$c55 = "column",
      peg$c56 = peg$literalExpectation("column", false),
      peg$c57 = peg$otherExpectation("primary key"),
      peg$c58 = "primary_key",
      peg$c59 = peg$literalExpectation("primary_key", false),
      peg$c60 = "version",
      peg$c61 = peg$literalExpectation("version", false),
      peg$c62 = "do",
      peg$c63 = peg$literalExpectation("do", false),
      peg$c64 = "end",
      peg$c65 = peg$literalExpectation("end", false),
      peg$c66 = peg$otherExpectation("lambda function"),
      peg$c67 = "=>",
      peg$c68 = peg$literalExpectation("=>", false),
      peg$c69 = "->",
      peg$c70 = peg$literalExpectation("->", false),
      peg$c71 = /^[^"\n]/,
      peg$c72 = peg$classExpectation(["\"", "\n"], true, false),
      peg$c73 = function(c) { return c.join("") },
      peg$c74 = /^[^'\n]/,
      peg$c75 = peg$classExpectation(["'", "\n"], true, false),
      peg$c76 = ".",
      peg$c77 = peg$literalExpectation(".", false),
      peg$c78 = peg$anyExpectation(),
      peg$c79 = function() {return text()},
      peg$c80 = /^[0-9]/i,
      peg$c81 = peg$classExpectation([["0", "9"]], false, true),
      peg$c82 = peg$otherExpectation("letter, number or underscore"),
      peg$c83 = /^[a-z0-9_.]/i,
      peg$c84 = peg$classExpectation([["a", "z"], ["0", "9"], "_", "."], false, true),
      peg$c85 = peg$otherExpectation("comment line"),
      peg$c86 = "#",
      peg$c87 = peg$literalExpectation("#", false),
      peg$c88 = peg$otherExpectation("whatever"),
      peg$c89 = /^[^\t\r\n]/,
      peg$c90 = peg$classExpectation(["\t", "\r", "\n"], true, false),
      peg$c91 = "'",
      peg$c92 = peg$literalExpectation("'", false),
      peg$c93 = "\"",
      peg$c94 = peg$literalExpectation("\"", false),
      peg$c95 = "|",
      peg$c96 = peg$literalExpectation("|", false),
      peg$c97 = peg$otherExpectation("comment"),
      peg$c98 = "//",
      peg$c99 = peg$literalExpectation("//", false),
      peg$c100 = /^[^\n]/,
      peg$c101 = peg$classExpectation(["\n"], true, false),
      peg$c102 = peg$otherExpectation("newline"),
      peg$c103 = "\r\n",
      peg$c104 = peg$literalExpectation("\r\n", false),
      peg$c105 = "\n",
      peg$c106 = peg$literalExpectation("\n", false),
      peg$c107 = peg$otherExpectation("whitespace"),
      peg$c108 = /^[ \t\r\n\r]/,
      peg$c109 = peg$classExpectation([" ", "\t", "\r", "\n", "\r"], false, false),
      peg$c110 = " ",
      peg$c111 = peg$literalExpectation(" ", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseschema() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseline_rule();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseline_rule();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseline_rule() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsewhitespace();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsewhitespace();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parserule();
      if (s2 !== peg$FAILED) {
        s1 = [s1, s2];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parsecomment_line();
      if (s0 === peg$FAILED) {
        s0 = peg$parseend_line();
        if (s0 === peg$FAILED) {
          s0 = peg$parse__();
        }
      }
    }

    return s0;
  }

  function peg$parserule() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsecreate_table_syntax();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c1(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseadd_foreign_key_syntax();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$parseadd_check_constraint_syntax();
        if (s0 === peg$FAILED) {
          s0 = peg$parseother_class_prop();
        }
      }
    }

    return s0;
  }

  function peg$parseadd_check_constraint_syntax() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsesp();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsesp();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseadd_check_constraint();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parsesp();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parsesp();
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parsesymbol();
          if (s4 === peg$FAILED) {
            s4 = peg$parsename();
          }
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 44) {
              s5 = peg$c3;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c4); }
            }
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = peg$parsesp();
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$parsesp();
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parsename();
                if (s7 !== peg$FAILED) {
                  s8 = [];
                  s9 = peg$parsecheck_constraint_props();
                  while (s9 !== peg$FAILED) {
                    s8.push(s9);
                    s9 = peg$parsecheck_constraint_props();
                  }
                  if (s8 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c5(s4, s7, s8);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseadd_foreign_key_syntax() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsesp();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsesp();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseadd_foreign_key();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parsesp();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parsesp();
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parsename();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 44) {
              s5 = peg$c3;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c4); }
            }
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = peg$parsesp();
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$parsesp();
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parsename();
                if (s7 !== peg$FAILED) {
                  s8 = [];
                  s9 = peg$parseadd_foreign_key_props_syntax();
                  while (s9 !== peg$FAILED) {
                    s8.push(s9);
                    s9 = peg$parseadd_foreign_key_props_syntax();
                  }
                  if (s8 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c6(s4, s7, s8);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseadd_foreign_key_props_syntax() {
    var s0, s1, s2, s3, s4, s5, s6;
